--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+
         
     }
 
@@ -34,13 +35,14 @@
         z-index: 1;
         display: none;
         position: absolute;
-        top: 80px;
+        top: 73px;
         left: 0;
         right: 0;
         z-index: 1;
-        background-color: white;
+        background-color: blue;
         padding: 10px;
-        text-align: center;
+        text-align: right;
+        font-size: 20px;
     }
 
     ul li {
@@ -52,6 +54,7 @@
     .nav a {
         text-decoration: none;
         color:black;
+        font-size: 25px;
 
     
     }
@@ -67,5 +70,9 @@
         padding: 10px;
     }
 
+    .buttons a  {
+        padding:15px;
+        gap:10px;
+    }
 
 }
