--- a/style.css
+++ b/style.css
@@ -95,6 +95,22 @@
     }
 
     .project_button {
-        padding-top: 30px;
+        padding-top: 40px;
+    }
+
+    .title2 {
+        padding: 40px;
+        text-align: center;
+        font-size: 3.5rem;
+
+
+    }
+
+    .about_me {
+        text-align: center;
+        font-size: 18px;
+    }
+
+    .section1 {
     }
 }
