--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+body {
+    height: 5000px;
+}
+
 #hamburger-icon {
     display: none;
     cursor: pointer;
@@ -99,7 +109,7 @@
     }
 
     .title2 {
-        padding: 40px;
+        padding-top: 40px;
         text-align: center;
         font-size: 3.5rem;
 
@@ -111,6 +121,13 @@
         font-size: 18px;
     }
 
-    .section1 {
-    }
+   .contact {
+    font-size: 30px;
+    width: 50%;
+   }
+
+   .contact_button{
+    padding-top: 40px;
+
+   }
 }
