--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@
 
 body {
     height: 5000px;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
 }
 
 #hamburger-icon {
@@ -26,7 +29,7 @@ body {
 @media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (-webkit-device-pixel-ratio: 2) {
 
     header {
-        width: 375px;
+        width: 100%;
         height: 60px;
         background-color: wheat;
     }
@@ -108,14 +111,6 @@ body {
         padding-top: 40px;
     }
 
-    .title2 {
-        padding-top: 40px;
-        text-align: center;
-        font-size: 3.5rem;
-
-
-    }
-
     .about_me {
         text-align: center;
         font-size: 18px;
@@ -126,8 +121,19 @@ body {
     width: 50%;
    }
 
-   .contact_button{
+   .contact_button {
     padding-top: 40px;
+   }
 
+   img {
+    width: 100%;
+    border: 3px solid black;
+
+   }
+
+   .img1 {
+    padding-top: 40px;
+    padding-right: 20px;
+    padding-left: 20px;
    }
 }
