--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
 }
 
 body {
-    height: 5000px;
     display: flex;
     flex-direction: column;
     gap: 50px;
@@ -70,8 +69,6 @@ body {
         text-decoration: none;
         color:black;
         font-size: 25px;
-
-    
     }
 
     * {
@@ -135,5 +132,27 @@ body {
     padding-top: 40px;
     padding-right: 20px;
     padding-left: 20px;
+   }
+
+   .contact {
+    font-size: 30px;
+    width: 50%;
+   }
+
+   .ul1 .li1 {
+    list-style-type: none;
+    text-decoration:none;
+   }
+
+   .foot {
+    background-color: black;
+    height: 60px;
+   }
+
+   .white {
+    color: white;
+    text-align: center;
+    padding-top: 20px;
+    font-size: 10px;
    }
 }
