--- a/style.css
+++ b/style.css
@@ -30,15 +30,24 @@ body {
     header {
         width: 100%;
         height: 60px;
-        background-color: wheat;
+        position: fixed;
+
     }
 
+    .section1 {
+        padding-top: 3.2rem;
+        background-color: ;
+    }
+
+    .section2 {
+        background-color: rgb(255, 255, 255);
+    }
 
     .nav {
         display: flex;
         align-items: center;
         justify-content: space-between;
-
+        background-color: white;
         
     }
 
@@ -69,6 +78,7 @@ body {
         text-decoration: none;
         color:black;
         font-size: 25px;
+        padding-left: 5px;
     }
 
     * {
@@ -79,7 +89,7 @@ body {
     #hamburger-icon {
         display: block;
         align-self: flex-end;
-        padding: 10px;
+        padding: 17px 10px 10px;
     }
 
     .buttons a  {
@@ -87,8 +97,13 @@ body {
         gap:10px;
     }
 
+    a {
+        text-decoration: none;
+        color: white;
+    }
+
     .title1 { 
-        padding-top: 40px;
+        margin-top: 40px;
         text-align: center;
         font-size: 3.5rem;
     }
@@ -104,7 +119,7 @@ body {
         width: 50%;
     }
 
-    .project_button {
+    project_button {
         padding-top: 40px;
     }
 
@@ -139,11 +154,6 @@ body {
     width: 50%;
    }
 
-   .ul1 .li1 {
-    list-style-type: none;
-    text-decoration:none;
-   }
-
    .foot {
     background-color: black;
     height: 60px;
@@ -154,5 +164,21 @@ body {
     text-align: center;
     padding-top: 20px;
     font-size: 10px;
+   }
+
+   h2{
+    padding-top: 40px;
+    padding-left: 10px;
+    text-align: left;
+    font-size:;
+   }
+
+   .data {
+    display: flex;
+    flex-direction: column;
+   }
+
+   .white_a a {
+    color: black;
    }
 }
